---
source: tests/analysis.rs
expression: output
---
Root{defs:[Def{kind:Function{name:"negation",params:[Param{name:"x",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:UnaryOp{op:"Neg",expr:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"x"}}}}}}]}},return_type:Primitive{type:"I32"}}},Def{kind:Function{name:"add",params:[Param{name:"a",type:Primitive{type:"I32"}},Param{name:"b",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:BinOp{op:"Add",left:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"a"}},right:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"b"}}}}}}]}},return_type:Primitive{type:"I32"}}},Def{kind:Function{name:"test",params:[Param{name:"a",type:Primitive{type:"I32"}}],body:Expr{type:Primitive{type:"Never"},kind:Block{exprs:[Expr{type:Primitive{type:"I32"},kind:LetBinding{name:"x",type_annotation:unresolved,value:Expr{type:Primitive{type:"I32"},kind:Call{func:Expr{type:unresolved,kind:Identifier{name:"negation"}},args:[Expr{type:Primitive{type:"I32"},kind:Call{func:Expr{type:unresolved,kind:Identifier{name:"add"}},args:[Expr{type:Primitive{type:"I32"},kind:Literal{value:Int(10)}},Expr{type:Primitive{type:"I32"},kind:Identifier{name:"a"}}]}}]}}}},Expr{type:Primitive{type:"Never"},kind:Return{value:Expr{type:Primitive{type:"I32"},kind:Identifier{name:"x"}}}}]}},return_type:Primitive{type:"I32"}}}]}
